# sample-metadata-extraction-from-docs

./: 0_schema_extraction_using_Amazon_Bedrock.ipynb  1_perform_analysis_on_metadata_evaluation.ipynb  README.md  config.yaml  globals.py  metadata_schema_example.json  pyproject.toml  requirements.txt  utils.py
prompt_template/: claude_prompt_template.txt  nova_prompt_template.txt
results/us-anthropic-claude-3-5-sonnet-20241022-v2:0/: ml-best-practices-healthcare-life-sciences_20250210_173221.json
